styledir = $(pkgdatadir)/styles/BlueFlux/pixmaps

style_DATA = button_close_active.xpm button_close_pressed.xpm \
	button_close_unfocus.xpm button_max_active.xpm button_max_pressed.xpm \
	button_max_unfocus.xpm button_min_active.xpm button_min_pressed.xpm \
	button_min_unfocus.xpm button_stick_active.xpm button_stick_pressed.xpm \
	button_stick_unfocus.xpm button_stuck.xpm button_stuck_unfocus.xpm \
	button_toolbar.xpm button_toolbar_pressed.xpm menu_frame.xpm title_bar.xpm \
	title_bar_unfocus.xpm toolbar.xpm toolbar_label.xpm

include ../../Makefile.include
