styledir = $(pkgdatadir)/styles/Emerge/pixmaps

style_DATA = bullet.xpm close.xpm icon.xpm max.xpm stick-unfocus.xpm \
	stuck-unfocus.xpm close-pressed.xpm icon-pressed.xpm max-pressed.xpm \
	selected.xpm stick.xpm stuck.xpm close-unfocus.xpm icon-unfocus.xpm \
    max-unfocus.xpm stick-pressed.xpm stuck-pressed.xpm unselected.xpm

include ../../Makefile.include
